--- a/BlogReport.ipynb
+++ b/BlogReport.ipynb
@@ -8,20 +8,20 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "#import math\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import r2_score, mean_squared_error\n",
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import f_regression\n",
     "from sklearn import preprocessing\n",
+    "#from sklearn.linear_model import LinearRegression\n",
+    "#from sklearn.metrics import r2_score, mean_squared_error\n",
+    "#from sklearn.feature_selection import SelectKBest\n",
+    "#from sklearn.feature_selection import f_regression\n",
     "\n",
-    "import collections\n",
+    "#import collections\n",
     "\n",
-    "import math\n",
     "%matplotlib inline"
    ]
   },
